--- a/src/client/main.scss
+++ b/src/client/main.scss
@@ -41,3 +41,12 @@ body {
   flex-grow: 2;
   margin-left: 30px;
 }
+
+.wait-card {flex-grow: 1}
+
+.wait-progress {
+  display: block;
+  width: 60px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
